Fix exports and spacing.

--- a/src/emrt/necd/content/browser/static/emrt.necd.content.css
+++ b/src/emrt/necd/content/browser/static/emrt.necd.content.css
@@ -427,7 +427,7 @@
 	color: black;
 	margin-right: 0.3em;
 }
-#filters .row{
+#filters {
 	background-color: #F3F3F3;
 	padding: 5px 0;
 }
@@ -449,7 +449,6 @@
 }
 #observations{
 	background-color: #F3F3F3;
-	padding: 10px 20px !important;
 }
 #observations .actions{
 	margin-top: 0px;
